# help-me-i-am-under-the-water

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: House.blend  Pufferfish.blend  Skyscraper.blend
Assets/Enviroment/House/: House.blend  House.mtl
Assets/Enviroment/Road/: Road.blend  Road.mtl
Assets/Enviroment/Rock/: Rock.blend  Rock.mtl
Assets/Enviroment/Skyscraper/: Skyscraper.blend  Skyscraper.mtl
Assets/Fishes/Cod/: COD.blend  COD.mtl
Assets/Fishes/Manta/: Manta.blend  Manta.mtl
Assets/Fishes/Pufferfish/: Pufferfish.blend  Pufferfish.mtl
Assets/Fishes/Telescopefish/: Telescope.blend  Telescope.mtl
Assets/Shaders/: BRDF.glsl
Assets/Shaders/Cube/: fragment.glsl
Assets/Shaders/Skybox/: fragment.glsl  vertex.glsl
Assets/Shaders/Terrain/: tess_control.glsl  tess_evaluation.glsl  vertex.glsl
Assets/Shaders/Water/: fragment.glsl  vertex.glsl
GameData/: Lights.lit  Materials.pbr  Objects.txt  materials.pbr
GameData/Assets/Meshes/: Cod.msh  Default.msh  Fish.msh  House.msh  Manta.msh  Mesh.msh  Pufferfish.msh  Road.msh  Rock.msh  Roof.msh  Skyscraper.msh  TelescopeFish.msh  Test.msh  Walls.msh  WindowInner.msh  empty.msh  screen_quad.msh  sky_box.msh  terrain_chunk.msh  testing.msh
GameData/Assets/Meshes/testing/: mesh.msh
GameData/Assets/Shaders/Cube/: vertex.glsl
GameData/Assets/Shaders/Default/: fragment.glsl  vertex.glsl
GameData/Assets/Shaders/Manta/: fragment.glsl  vertex.glsl
GameData/Assets/Shaders/PostProcessing/: fragment.glsl  vertex.glsl
GameData/Assets/Shaders/SDF/: fragment.glsl  vertex.glsl
GameData/Assets/Shaders/Terrain/: fragment.glsl  tess_control.glsl  tess_evaluation.glsl
GameData/Assets/Shaders/Water/: tess_evaluation.glsl  vertex.glsl
Scripts/: FishMovement.cpp  GameObjectScriptInterface.h  Template.cpp  Test.cpp
UnderTheWater/: App.cpp  App.h  AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  DataRecords.cpp  DataRecords.h  DataSerializer.cpp  DataSerializer.h  Meduse.h  ObjectManager.cpp  ObjectManager.h  SDF.cpp  SDF.h  Scene.cpp  Scene.h  UI.cpp  UI.h  config.h  main.cpp  utils.h
UnderTheWater/Camera/: Camera.cpp  Camera.h
UnderTheWater/DataSerializer/: DataSerializer.cpp  DataSerializer.h  LightsSerialization.cpp  LightsSerialization.h  MaterialsSerialization.cpp  MaterialsSerialization.h  MeshSerialization.cpp  MeshSerialization.h  ObjectsSerialization.cpp  ObjectsSerialization.h  ScriptSerialization.cpp  ScriptSerialization.h  ShaderSerialization.cpp  ShaderSerialization.h
UnderTheWater/GameData/: Materials.pbr
UnderTheWater/Objects/: GameObject.cpp  GameObject.h  GameObjectData.h  Object.h  ObjectManager.cpp  ObjectManager.h
UnderTheWater/Objects/Meduse/: Meduse.cpp  Meduse.h
UnderTheWater/Objects/Skybox/: Skybox.cpp  Skybox.h
UnderTheWater/Objects/Terrain/: Terrain.cpp  Terrain.h
UnderTheWater/Objects/Water/: Water.cpp  Water.h
UnderTheWater/Resources/: Resources.cpp  Resources.h
UnderTheWater/Resources/Lights/: Lights.cpp  Lights.h
UnderTheWater/Resources/Materials/: Materials.cpp  Materials.h
UnderTheWater/Resources/Meshes/: Meshes.cpp  Meshes.h
UnderTheWater/Resources/Shaders/: BRDF.h  Cube.h  SkyBox.h  Terrain.h  Water.h
UnderTheWater/ScriptController/: ScriptController.cpp  ScriptController.h
UnderTheWater/ScriptShared/: GameObjectData.h  GameObjectScriptInterface.h  ILogger.h  IObjectManger.h  Logger.h  ScriptRegister.h
UnderTheWater/UI/: Settings.h  UI.cpp  UI.h  UI_AssetLoader.cpp  UI_AssetLoader.h  UI_Info.cpp  UI_Info.h  UI_Lights.cpp  UI_Lights.h  UI_Log.h  UI_Logs.cpp  UI_Materials.cpp  UI_Materials.h  UI_Objects.cpp  UI_Objects.h  UI_ScriptEditor.cpp  UI_ScriptEditor.h  UI_Scripts.cpp  UI_Scripts.h  UI_ShaderEditors.cpp  UI_ShaderEditors.h  UI_Shaders.cpp  UI_Shaders.h
UnderTheWater/Utils/: Logger.cpp  Logger.h  utils.h
